# humanize

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  RELEASING.md  mkdocs.yml  pyproject.toml  requirements-mypy.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  SECURITY.md  dependabot.yml  labels.yml  renovate.json
.github/workflows/: benchmark.yml  docs.yml  labels.yml  lint.yml  release-drafter.yml  release.yml  require-pr-label.yml  test.yml
docs/: index.md  lists.md  requirements.txt
scripts/: generate-translation-binaries.ps1  install-gettext-windows.ps1  update-translations.sh
src/humanize/: __init__.py  __main__.py  bitrate.py  filesize.py  i18n.py  lists.py  number.py  time.py
src/humanize/cli/: __init__.py  anntype.py  argutils.py  filesize.py  main.py  number.py
src/humanize/locale/ar/LC_MESSAGES/: humanize.po
src/humanize/locale/bn_BD/LC_MESSAGES/: humanize.po
src/humanize/locale/cs_CZ/LC_MESSAGES/: humanize.po
src/humanize/locale/da_DK/LC_MESSAGES/: humanize.po
src/humanize/locale/de_DE/LC_MESSAGES/: humanize.po
src/humanize/locale/el_GR/LC_MESSAGES/: humanize.po
src/humanize/locale/eo/LC_MESSAGES/: humanize.po
src/humanize/locale/es_ES/LC_MESSAGES/: humanize.po
src/humanize/locale/eu/LC_MESSAGES/: humanize.po
src/humanize/locale/fr_FR/LC_MESSAGES/: humanize.po
src/humanize/locale/it_IT/LC_MESSAGES/: humanize.po
src/humanize/locale/lv/LC_MESSAGES/: humanize.po
src/humanize/locale/pl_PL/LC_MESSAGES/: humanize.po
src/humanize/locale/ro/LC_MESSAGES/: humanize.po
src/humanize/locale/sv_SE/LC_MESSAGES/: humanize.po
src/humanize/locale/tr_TR/LC_MESSAGES/: humanize.po
src/humanize/locale/uz/LC_MESSAGES/: humanize.po
src/humanize/locale/zh_CN/LC_MESSAGES/: humanize.po
tests/: issue-14-days-hours-boundary-in-precisedelta.md  test_benchmarks.py  test_filesize.py  test_heldout_nonfinite_naturaltime.py  test_i18n.py  test_lists.py  test_number.py  test_oracle_nonfinite_naturaldelta.py  test_time.py
tests/cli/: test_anntype.py  test_main.py
